Fix column spacing, add and style a footer.

--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,11 @@ h1, h2, h3 {
 }
 
 .column {
-  width: 400px;
+  width: 250px;
   float: left;
   margin: 10px;
   border: 1px black;
   padding: 5px;
-}
-
-.top-nav li {
-  float: right;
-  list-style: none;
 }
 
 container {
@@ -30,4 +25,67 @@ container {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+  margin: 10px;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 20px 35px;
+  text-decoration: none;
+  font-size: 17px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 15%;
+  display: block;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #813772;
+  color: white;
+}
+
+.headshot {
+  width: 250px;
+}
+
+.column p {
+  text-align: justify;
+}
+
+.column h3 {
+  text-align: center;
+  font-size: 150%;
+}
+
+.footer {
+  float: left;
+  margin: 10px;
+  position: center;
+  background-color: #444;
+  color: #EFEFEF;
+  font-family: cursive;
+  /*width: 100%;*/
+  text-decoration: none;
+  font-size: 17px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 15px;
+  padding: 0px 5px;
+  overflow: hidden;
 }
